# fullyfeatured-template

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
cmake/: Conan.cmake
src/apps/: CMakeLists.txt  main.cpp
src/dp_re/: CMakeLists.txt
src/dp_re/abstractions/: Product.cpp  Product.hpp  StatisticTool.cpp  StatisticTool.hpp
src/dp_re/algorithms/: FindLongestString.hpp  General.hpp  TwoSum.hpp
src/dp_re/behavioral/: Chain.cpp  Chain.hpp  ChainMy.cpp  ChainMy.hpp  Command.hpp
src/dp_re/concurr/: Hello.cpp  Hello.hpp
src/dp_re/creational/: Builder.cpp  Builder.hpp  Director.cpp  Director.hpp  FactoryMethod.cpp  FactoryMethod.hpp  Prototype.cpp  Prototype.hpp
src/dp_re/structural/: Adapter.cpp  Adapter.hpp  Bridge.cpp  Bridge.hpp  BridgeImpl.hpp  BridgeImplConcrete.cpp  BridgeImplConcrete.hpp  Flyweight.cpp  Flyweight.hpp
test/: CMakeLists.txt
test/algorithms/: LeetCodeTest.cpp  StandardTest.cpp
test/behavioral/: ChainTest.cpp  CommandTest.cpp
test/creational/: BuilderTest.cpp  FactoryMethodTest.cpp  PrototypeTest.cpp
test/structural/: AdapterTest.cpp  BridgeTest.cpp  FlyweightTest.cpp
test/utils/: TypeDeduction.hpp  TypeDeductionTest.cpp
